# boidSimulation

./: .gitignore  CMakeLists.txt  Makefile  benchmark.cpp  benchmarkRunner.h  main.cpp
includes/: boid.h  boid2.h  boid_soa.h  grid.h  grid2.h  margin.h  simulation.h  spatialPartition.h
src/: boid.cpp  grid.cpp  simulation.cpp
